feat(语义分析): 增强语义分析功能并添加中间代码生成界面
- 重构语义分析器代码结构，优化变量和常量定义的处理逻辑
- 添加四元式中间代码生成界面及相关表格控件
- 修正符号表显示方法命名以更准确反映其功能
- 为文件保存对话框添加.star文件类型过滤器
- 优化语法树节点类型处理，简化节点创建逻辑